0.55    14 September 2004
        Added Plucene search backend (with help from Simon Cozens).

0.54    25 June 2004
        Let ->delete_node take an optional version parameter.

0.53    18 June 2004
        Fixed CGI::Wiki::TestLib so $iterator->number actually does something.

0.52    10 June 2004
        Add include_all_changes and between_days to list_recent_changes.

0.51    8 June 2004
        Time for a non-developer release.

0.51_02 6 June 2004
        Added support for passing in a database handle instead of
          connection parameters (Chris Winters).

0.51_01 24 February 2004
        Refactoring of search classes in preparation for new search
          backend.  (Simon Cozens)
        Please test against your applications and let me know of any
          problems ASAP.

0.50    21 December 2003
        First non-developer release with new test system.

0.50_02 21 November 2003
        Make tests skip rather than try to run zero tests if no backends
          configured - thanks to nothingmuch via CPAN testers for the
          test failure report.

0.50_01 18 November 2003
        Huge overhaul of test suite, no change in functionality.
        Removed dependency on Test::MockObject and Hook::LexWrap
          (the relevant tests are now skipped if these aren't installed).
        Removed the examples since they were very out of date.
        Made a small clarification to the CGI::Wiki::Plugin docs.

0.49    23 September 2003
        Added "ignore_case" option to ->list_nodes_by_metadata

0.48    22 September 2003
        Couple of small changes so I can write formatters that allow node
          metadata to affect the rendering of the node.
        A rewrite and renaming of the CGI::Wiki distribution is on the
          cards - subscribe to cgi-wiki-dev if you're interested:
          http://www.earth.li/cgi-bin/mailman/listinfo/cgi-wiki-dev

0.47    29 August 2003
        Added metadata_was and metadata_wasnt parameters to list_recent_changes
